2006-05-15  Carlos Garnacho <carlosg@gnome.org>

	* po/*.po, po/POTFILES.*, po/ChangeLog: nuked, no more translations in
	HEAD, huge thanks to all contributors until now
	* ABOUT-NLS: removed too

2006-05-15  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Merged the waiting-the-dbus branch into HEAD

	* configure.in, Makefile.am, autogen.sh: bump to 1.9.0, do not use
	translations (no longer needed) and fix references to the new .pc file

	* GroupsConfig.pm, HostsConfig.pm, IfacesConfig.pm, NFSConfig.pm,
	NTPConfig.pm, SMBConfig.pm, ServicesConfig.pm, ServicesList.pm,
	SharesList.pm, SystemToolsBackends.pl.in, TimeConfig.pm, 
	UsersConfig.pm, org.freedesktop.SystemToolsBackends.service.in,
	system-tools-backends-2.0.pc.in, test-backends, Init/Services.pm,
	Init/ServicesList.pm, Network/Hosts.pm, Network/Ifaces.pm, 
	Shares/Exports.pm, Shares/NFS.pm, Shares/SMB.pm, Time/NTP.pm,
	Time/TimeDate.pm, Users/Groups.pm, Users/Shells.pm, Users/Users.pm,
	Utils/Backend.pm, Utils/File.pm, Utils/Monitor.pm, Utils/Parse.pm,
	Utils/Platform.pm, Utils/Replace.pm, Utils/Report.pm, Utils/Util.pm,
	Utils/XML.pm: Added/refactored files, replace the functionality in 
	the older *.pl.in files

	* boot-conf.in, boot-grub.pl.in, boot-lilo.pl.in, boot-yaboot.pl.in,
	boot.pl.in, file.pl.in, general.pl.in, network-conf.in, network.pl.in,
	parse.pl.in, platform.pl.in, replace.pl.in, report.pl.in,
	service-list.pl.in, service.pl.in, services-conf.in, share.pl.in,
	shares-conf.in, system-tools-backends.pc.in, time-conf.in,
	users-conf.in, util.pl.in, xml.pl.in: Functional removed files, 
	they've been replaced with the files above.

	* add_amp.sh, debug.pl.in, dhcpd-conf.in, dhcpd.pl.in, disks-conf.in,
	display-conf.in, filesys.pl.in, font-conf.in, font.pl.in,
	gen-reportcode-list.sh, guess_system.sh, hardware-conf.in,
	internetsharing-conf.in, ishare.pl.in, media.pl.in, memory-conf.in,
	mouse-conf.in, option.pl, package-conf.in, partition.pl.in,